--- a/glade/dialogs/serverDelete.glade
+++ b/glade/dialogs/serverDelete.glade
@@ -36,7 +36,7 @@
                 <property name="yalign">0</property>
                 <property name="label" translatable="yes">&lt;span weight="bold" size="larger"&gt;Delete Server&lt;/span&gt;
 
-Are you sure you want to delete the server?</property>
+Are you sure you want to delete the server '%(server)s'?</property>
                 <property name="use_markup">True</property>
                 <property name="wrap">True</property>
               </widget>
