Update preferences dialog.

--- a/glade/dialogs/preferences.glade
+++ b/glade/dialogs/preferences.glade
@@ -141,10 +141,20 @@
                   </packing>
                 </child>
                 <child>
-                  <placeholder/>
-                </child>
-                <child>
-                  <placeholder/>
+                  <widget class="GtkCheckButton" id="use_default_font">
+                    <property name="label" translatable="yes">Use _default font</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">False</property>
+                    <property name="use_underline">True</property>
+                    <property name="draw_indicator">True</property>
+                    <signal name="toggled" handler="tekka_use_default_font_toggled"/>
+                  </widget>
+                  <packing>
+                    <property name="right_attach">2</property>
+                    <property name="top_attach">4</property>
+                    <property name="bottom_attach">5</property>
+                  </packing>
                 </child>
                 <child>
                   <placeholder/>
