--- a/glade/dialogs/history.glade
+++ b/glade/dialogs/history.glade
@@ -116,6 +116,7 @@
             <property name="draw_indicator">True</property>
           </widget>
           <packing>
+            <property name="expand">False</property>
             <property name="position">3</property>
           </packing>
         </child>
