--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -262,15 +262,6 @@
                         <property name="orientation">vertical</property>
                         <property name="spacing">6</property>
                         <child>
-                          <widget class="Custom" id="topicBar">
-                            <property name="visible">True</property>
-                          </widget>
-                          <packing>
-                            <property name="expand">False</property>
-                            <property name="position">0</property>
-                          </packing>
-                        </child>
-                        <child>
                           <widget class="GtkVPaned" id="outputVPaned">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
@@ -599,6 +590,14 @@
         <property name="label" translatable="yes">Auto-join</property>
         <property name="use_underline">True</property>
         <signal name="toggled" handler="autoJoinItem_toggled_cb"/>
+      </widget>
+    </child>
+    <child>
+      <widget class="GtkMenuItem" id="setTopicItem">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">Topic</property>
+        <property name="use_underline">True</property>
+        <signal name="activate" handler="setTopicItem_activate_cb"/>
       </widget>
     </child>
     <child>
