--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -123,6 +123,15 @@
                         <signal name="toggled" handler="menu_View_showStatusIcon_toggled_cb"/>
                       </widget>
                     </child>
+                    <child>
+                      <widget class="GtkCheckMenuItem" id="menu_View_showTopicBar">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">_Topic Bar</property>
+                        <property name="use_underline">True</property>
+                        <signal name="toggled" handler="menu_View_showTopicBar_toggled_cb"/>
+                      </widget>
+                    </child>
+
                   </widget>
                 </child>
               </widget>
@@ -261,6 +270,15 @@
                         <property name="border_width">6</property>
                         <property name="orientation">vertical</property>
                         <property name="spacing">6</property>
+						<child>
+                          <widget class="Custom" id="topicBar">
+                            <property name="visible">False</property>
+                          </widget>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="position">0</property>
+                          </packing>
+                        </child>
                         <child>
                           <widget class="GtkVPaned" id="outputVPaned">
                             <property name="visible">True</property>
