--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -74,7 +74,7 @@
                       </widget>
                     </child>
                     <child>
-                      <widget class="GtkImageMenuItem" id="menu_maki_Shutdown">
+                      <widget class="GtkImageMenuItem" id="menu_maki_Disconnect">
                         <property name="label" translatable="yes">Disconnect</property>
                         <property name="visible">True</property>
                         <property name="use_stock">False</property>
@@ -94,14 +94,13 @@
                         <property name="use_stock">False</property>
                         <signal name="activate" handler="menu_maki_Shutdown_activate_cb"/>
                         <child internal-child="image">
-                          <widget class="GtkImage" id="image3">
+                          <widget class="GtkImage" id="image4">
                             <property name="visible">True</property>
                             <property name="stock">gtk-cancel</property>
                           </widget>
                         </child>
                       </widget>
                     </child>
-
                   </widget>
                 </child>
               </widget>
@@ -146,7 +145,6 @@
                         <signal name="toggled" handler="menu_View_showTopicBar_toggled_cb"/>
                       </widget>
                     </child>
-
                   </widget>
                 </child>
               </widget>
@@ -198,7 +196,7 @@
                         <property name="use_stock">False</property>
                         <signal name="activate" handler="menu_Dialogs_plugins_activate_cb"/>
                         <child internal-child="image">
-                          <widget class="GtkImage" id="image4">
+                          <widget class="GtkImage" id="image5">
                             <property name="visible">True</property>
                             <property name="stock">gtk-properties</property>
                           </widget>
@@ -285,8 +283,15 @@
                         <property name="border_width">6</property>
                         <property name="orientation">vertical</property>
                         <property name="spacing">6</property>
-						<child>
-                          <widget class="Custom" id="topicBar">
+                        <signal name="size_allocate" handler="outputVBox_size_allocate_cb"/>
+                        <child>
+                          <widget class="GtkLabel" id="topicBar">
+                            <property name="xalign">0</property>
+                            <property name="yalign">0</property>
+                            <property name="ypad">3</property>
+                            <property name="wrap">True</property>
+                            <property name="wrap_mode">word-char</property>
+                            <property name="selectable">True</property>
                             <property name="visible">False</property>
                           </widget>
                           <packing>
