--- a/glade/dialogs/plugins.glade
+++ b/glade/dialogs/plugins.glade
@@ -25,6 +25,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="headers_clickable">True</property>
+                <signal name="button_press_event" handler="pluginView_button_press_event_cb"/>
               </widget>
             </child>
           </widget>
@@ -44,7 +45,6 @@
 				<property name="use_underline">True</property>
 				<property name="sensitive">False</property>
                 <property name="label" translatable="yes">C_onfigure</property>
-                <property name="response_id">1</property>
                 <signal name="clicked" handler="configureButton_clicked_cb"/>
               </widget>
             </child>
@@ -56,7 +56,6 @@
                 <property name="receives_default">True</property>
 				<property name="use_underline">True</property>
                 <property name="label" translatable="yes">_Load</property>
-                <property name="response_id">0</property>
                 <signal name="clicked" handler="loadButton_clicked_cb"/>
               </widget>
             </child>
@@ -67,7 +66,6 @@
                 <property name="receives_default">True</property>
 				<property name="use_underline">True</property>
                 <property name="label" translatable="yes">_Unload</property>
-                <property name="response_id">0</property>
                 <signal name="clicked" handler="unloadButton_clicked_cb"/>
               </widget>
               <packing>
@@ -85,7 +83,7 @@
                 <signal name="clicked" handler="closeButton_clicked_cb"/>
               </widget>
               <packing>
-                <property name="position">2</property>
+                <property name="position">3</property>
               </packing>
             </child>
           </widget>
