--- a/glade/dialogs/colorTable.ui
+++ b/glade/dialogs/colorTable.ui
@@ -4,7 +4,7 @@
   <!-- interface-naming-policy project-wide -->
   <object class="GtkDialog" id="colorTable">
     <property name="border_width">5</property>
-    <property name="title" translatable="yes">IRC color codes</property>
+    <property name="title" translatable="yes">IRC Colors</property>
     <property name="default_width">150</property>
     <property name="default_height">300</property>
     <property name="type_hint">normal</property>
@@ -43,7 +43,7 @@
                           <object class="GtkLabel" id="label2">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">00</property>
+                            <property name="label">00</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
                             </attributes>
@@ -56,7 +56,7 @@
                           <object class="GtkLabel" id="label3">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">01</property>
+                            <property name="label">01</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
                             </attributes>
@@ -71,7 +71,7 @@
                           <object class="GtkLabel" id="label4">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">02</property>
+                            <property name="label">02</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
                             </attributes>
@@ -86,7 +86,7 @@
                           <object class="GtkLabel" id="label5">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">03</property>
+                            <property name="label">03</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
                             </attributes>
@@ -101,7 +101,7 @@
                           <object class="GtkLabel" id="label6">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">04</property>
+                            <property name="label">04</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
                             </attributes>
@@ -116,7 +116,7 @@
                           <object class="GtkLabel" id="label7">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">05</property>
+                            <property name="label">05</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
                             </attributes>
@@ -131,7 +131,7 @@
                           <object class="GtkLabel" id="label8">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">06</property>
+                            <property name="label">06</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
                             </attributes>
@@ -146,7 +146,7 @@
                           <object class="GtkLabel" id="label9">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">07</property>
+                            <property name="label">07</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
                             </attributes>
@@ -161,7 +161,7 @@
                           <object class="GtkLabel" id="label10">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">08</property>
+                            <property name="label">08</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
                             </attributes>
@@ -176,7 +176,7 @@
                           <object class="GtkLabel" id="label11">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">09</property>
+                            <property name="label">09</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
                             </attributes>
@@ -191,7 +191,7 @@
                           <object class="GtkLabel" id="label12">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">10</property>
+                            <property name="label">10</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
                             </attributes>
@@ -206,7 +206,7 @@
                           <object class="GtkLabel" id="label13">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">11</property>
+                            <property name="label">11</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
                             </attributes>
@@ -221,7 +221,7 @@
                           <object class="GtkLabel" id="label14">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">12</property>
+                            <property name="label">12</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
                             </attributes>
@@ -236,7 +236,7 @@
                           <object class="GtkLabel" id="label15">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">13</property>
+                            <property name="label">13</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
                             </attributes>
@@ -251,7 +251,7 @@
                           <object class="GtkLabel" id="label16">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">14</property>
+                            <property name="label">14</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
                             </attributes>
@@ -266,7 +266,7 @@
                           <object class="GtkLabel" id="label17">
                             <property name="visible">True</property>
                             <property name="xalign">0</property>
-                            <property name="label" translatable="yes">15</property>
+                            <property name="label">15</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
                             </attributes>
@@ -526,7 +526,7 @@ Type %C02,01 for blue foreground and black background.</property>
             <property name="layout_style">end</property>
             <child>
               <object class="GtkButton" id="button1">
-                <property name="label" translatable="yes">gtk-close</property>
+                <property name="label">gtk-close</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
