--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -242,9 +242,14 @@
                       <widget class="GtkMenuItem" id="menu_Help_Colors">
                         <property name="visible">True</property>
                         <property name="tooltip" translatable="yes">Show a translation between IRC color codes and real colors</property>
-                        <property name="label" translatable="yes">IRC color table</property>
+                        <property name="label" translatable="yes">IRC Colors</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="menu_Help_Colors_activate_cb"/>
+                      </widget>
+                    </child>
+                    <child>
+                      <widget class="GtkSeparatorMenuItem" id="separator1">
+                        <property name="visible">True</property>
                       </widget>
                     </child>
                     <child>
